Changed a few things